# nano-vectordb-cpp

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  readme.md
.devcontainer/: Dockerfile
.github/workflows/: test-cpp.yml
docs/: Data.md  NanoVectorDB.md  metric.md  overview.md  serializer.md  storage.md
include/: MultiTenantNanoVDB.hpp  NanoVectorDB.hpp  helper.hpp  structs.hpp
include/metric/: base.hpp  cosine.hpp  factory.hpp  l2.hpp
include/serializer/: base.hpp  base64.hpp  factory.hpp  json.hpp
include/storage/: base.hpp  factory.hpp  file.hpp  mmap.hpp  sqlite.hpp
src/: test_db.cpp
